--- a/.hgignore
+++ b/.hgignore
@@ -14,6 +14,12 @@ build.conf
 /_NetworKit.cpp$
 src/python/NetworKit.egg-info/
 NetworKit-Tests-D
+\.out
+\.egg
+\~
+\.dot
+\.project
+\.cproject
 
 syntax: regexp
 ^output$
