--- a/.hgignore
+++ b/.hgignore
@@ -5,21 +5,22 @@ syntax: regexp
 \.mk$
 \.o$
 .DS_Store
-\.pyc
-\.a
-\.so
+\.pyc$
+\.a$
+\.so$
 \checkpoint.ipynb
 build.conf
 .sconsign.dblite
 /_NetworKit.cpp$
 src/python/NetworKit.egg-info/
 NetworKit-Tests-D
-\.out
-\.egg
-\~
-\.dot
-\.project
-\.cproject
+\.out$
+\.egg$
+\~$
+\.dot$
+\.project$
+\.cproject$
+^tracelog
 
 syntax: regexp
 ^output$
